// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarList renders with collapsed avatar count if > 5 users 1`] = `
<AvatarList
  avatarSize={28}
  maxVisibleAvatars={5}
  users={
    Array [
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "1",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "2",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "3",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "4",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "5",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "6",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
    ]
  }
>
  <Flex
    direction="row-reverse"
  >
    <Base
      className="css-1go71fn"
      direction="row-reverse"
    >
      <div
        className="css-1go71fn"
        is={null}
      >
        <Tooltip
          title="1 other users"
        >
          <CollapsedUsers
            className="tip"
            size={28}
            title="1 other users"
          >
            <div
              className="tip css-nj57ba-CollapsedUsers-Circle e1axh4r51"
              size={28}
              title="1 other users"
            >
              <Plus>
                <span
                  className="css-sduhlv-Plus e1axh4r52"
                >
                  +
                </span>
              </Plus>
              99
            </div>
          </CollapsedUsers>
        </Tooltip>
        <StyledAvatar
          hasTooltip={true}
          key="1"
          size={28}
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "1",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <Avatar
            className="css-cqjcge-StyledAvatar-Circle e1axh4r50"
            hasTooltip={true}
            size={28}
            user={
              Object {
                "email": "foo@example.com",
                "flags": Object {
                  "newsletter_consent_prompt": false,
                },
                "hasPasswordAuth": true,
                "id": "1",
                "isAuthenticated": true,
                "name": "Foo Bar",
                "options": Object {
                  "timezone": "UTC",
                },
                "username": "foo@example.com",
              }
            }
          >
            <UserAvatar
              className="css-cqjcge-StyledAvatar-Circle e1axh4r50"
              gravatar={true}
              hasTooltip={true}
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "flags": Object {
                    "newsletter_consent_prompt": false,
                  },
                  "hasPasswordAuth": true,
                  "id": "1",
                  "isAuthenticated": true,
                  "name": "Foo Bar",
                  "options": Object {
                    "timezone": "UTC",
                  },
                  "username": "foo@example.com",
                }
              }
            >
              <BaseAvatar
                className="css-cqjcge-StyledAvatar-Circle e1axh4r50"
                gravatarId="foo@example.com"
                hasTooltip={true}
                letterId="foo@example.com"
                size={28}
                style={Object {}}
                title="Foo Bar"
                tooltip="Foo Bar (foo@example.com)"
                type="gravatar"
                uploadPath="avatar"
              >
                <Tooltip
                  disabled={false}
                  title="Foo Bar (foo@example.com)"
                >
                  <StyledBaseAvatar
                    className="tip avatar css-cqjcge-StyledAvatar-Circle e1axh4r50"
                    style={
                      Object {
                        "height": "28px",
                        "width": "28px",
                      }
                    }
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="tip avatar e1axh4r50 css-15y5yv2-StyledBaseAvatar-StyledAvatar-Circle e1z0ohzl0"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                      title="Foo Bar (foo@example.com)"
                    >
                      <img
                        onError={[Function]}
                        onLoad={[Function]}
                        src="undefined/avatar/b48def645758b95537d4424c84d1a9ff?d=blank&s=32"
                      />
                    </span>
                  </StyledBaseAvatar>
                </Tooltip>
              </BaseAvatar>
            </UserAvatar>
          </Avatar>
        </StyledAvatar>
        <StyledAvatar
          hasTooltip={true}
          key="2"
          size={28}
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "2",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <Avatar
            className="css-cqjcge-StyledAvatar-Circle e1axh4r50"
            hasTooltip={true}
            size={28}
            user={
              Object {
                "email": "foo@example.com",
                "flags": Object {
                  "newsletter_consent_prompt": false,
                },
                "hasPasswordAuth": true,
                "id": "2",
                "isAuthenticated": true,
                "name": "Foo Bar",
                "options": Object {
                  "timezone": "UTC",
                },
                "username": "foo@example.com",
              }
            }
          >
            <UserAvatar
              className="css-cqjcge-StyledAvatar-Circle e1axh4r50"
              gravatar={true}
              hasTooltip={true}
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "flags": Object {
                    "newsletter_consent_prompt": false,
                  },
                  "hasPasswordAuth": true,
                  "id": "2",
                  "isAuthenticated": true,
                  "name": "Foo Bar",
                  "options": Object {
                    "timezone": "UTC",
                  },
                  "username": "foo@example.com",
                }
              }
            >
              <BaseAvatar
                className="css-cqjcge-StyledAvatar-Circle e1axh4r50"
                gravatarId="foo@example.com"
                hasTooltip={true}
                letterId="foo@example.com"
                size={28}
                style={Object {}}
                title="Foo Bar"
                tooltip="Foo Bar (foo@example.com)"
                type="gravatar"
                uploadPath="avatar"
              >
                <Tooltip
                  disabled={false}
                  title="Foo Bar (foo@example.com)"
                >
                  <StyledBaseAvatar
                    className="tip avatar css-cqjcge-StyledAvatar-Circle e1axh4r50"
                    style={
                      Object {
                        "height": "28px",
                        "width": "28px",
                      }
                    }
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="tip avatar e1axh4r50 css-15y5yv2-StyledBaseAvatar-StyledAvatar-Circle e1z0ohzl0"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                      title="Foo Bar (foo@example.com)"
                    >
                      <img
                        onError={[Function]}
                        onLoad={[Function]}
                        src="undefined/avatar/b48def645758b95537d4424c84d1a9ff?d=blank&s=32"
                      />
                    </span>
                  </StyledBaseAvatar>
                </Tooltip>
              </BaseAvatar>
            </UserAvatar>
          </Avatar>
        </StyledAvatar>
        <StyledAvatar
          hasTooltip={true}
          key="3"
          size={28}
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "3",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <Avatar
            className="css-cqjcge-StyledAvatar-Circle e1axh4r50"
            hasTooltip={true}
            size={28}
            user={
              Object {
                "email": "foo@example.com",
                "flags": Object {
                  "newsletter_consent_prompt": false,
                },
                "hasPasswordAuth": true,
                "id": "3",
                "isAuthenticated": true,
                "name": "Foo Bar",
                "options": Object {
                  "timezone": "UTC",
                },
                "username": "foo@example.com",
              }
            }
          >
            <UserAvatar
              className="css-cqjcge-StyledAvatar-Circle e1axh4r50"
              gravatar={true}
              hasTooltip={true}
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "flags": Object {
                    "newsletter_consent_prompt": false,
                  },
                  "hasPasswordAuth": true,
                  "id": "3",
                  "isAuthenticated": true,
                  "name": "Foo Bar",
                  "options": Object {
                    "timezone": "UTC",
                  },
                  "username": "foo@example.com",
                }
              }
            >
              <BaseAvatar
                className="css-cqjcge-StyledAvatar-Circle e1axh4r50"
                gravatarId="foo@example.com"
                hasTooltip={true}
                letterId="foo@example.com"
                size={28}
                style={Object {}}
                title="Foo Bar"
                tooltip="Foo Bar (foo@example.com)"
                type="gravatar"
                uploadPath="avatar"
              >
                <Tooltip
                  disabled={false}
                  title="Foo Bar (foo@example.com)"
                >
                  <StyledBaseAvatar
                    className="tip avatar css-cqjcge-StyledAvatar-Circle e1axh4r50"
                    style={
                      Object {
                        "height": "28px",
                        "width": "28px",
                      }
                    }
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="tip avatar e1axh4r50 css-15y5yv2-StyledBaseAvatar-StyledAvatar-Circle e1z0ohzl0"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                      title="Foo Bar (foo@example.com)"
                    >
                      <img
                        onError={[Function]}
                        onLoad={[Function]}
                        src="undefined/avatar/b48def645758b95537d4424c84d1a9ff?d=blank&s=32"
                      />
                    </span>
                  </StyledBaseAvatar>
                </Tooltip>
              </BaseAvatar>
            </UserAvatar>
          </Avatar>
        </StyledAvatar>
        <StyledAvatar
          hasTooltip={true}
          key="4"
          size={28}
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "4",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <Avatar
            className="css-cqjcge-StyledAvatar-Circle e1axh4r50"
            hasTooltip={true}
            size={28}
            user={
              Object {
                "email": "foo@example.com",
                "flags": Object {
                  "newsletter_consent_prompt": false,
                },
                "hasPasswordAuth": true,
                "id": "4",
                "isAuthenticated": true,
                "name": "Foo Bar",
                "options": Object {
                  "timezone": "UTC",
                },
                "username": "foo@example.com",
              }
            }
          >
            <UserAvatar
              className="css-cqjcge-StyledAvatar-Circle e1axh4r50"
              gravatar={true}
              hasTooltip={true}
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "flags": Object {
                    "newsletter_consent_prompt": false,
                  },
                  "hasPasswordAuth": true,
                  "id": "4",
                  "isAuthenticated": true,
                  "name": "Foo Bar",
                  "options": Object {
                    "timezone": "UTC",
                  },
                  "username": "foo@example.com",
                }
              }
            >
              <BaseAvatar
                className="css-cqjcge-StyledAvatar-Circle e1axh4r50"
                gravatarId="foo@example.com"
                hasTooltip={true}
                letterId="foo@example.com"
                size={28}
                style={Object {}}
                title="Foo Bar"
                tooltip="Foo Bar (foo@example.com)"
                type="gravatar"
                uploadPath="avatar"
              >
                <Tooltip
                  disabled={false}
                  title="Foo Bar (foo@example.com)"
                >
                  <StyledBaseAvatar
                    className="tip avatar css-cqjcge-StyledAvatar-Circle e1axh4r50"
                    style={
                      Object {
                        "height": "28px",
                        "width": "28px",
                      }
                    }
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="tip avatar e1axh4r50 css-15y5yv2-StyledBaseAvatar-StyledAvatar-Circle e1z0ohzl0"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                      title="Foo Bar (foo@example.com)"
                    >
                      <img
                        onError={[Function]}
                        onLoad={[Function]}
                        src="undefined/avatar/b48def645758b95537d4424c84d1a9ff?d=blank&s=32"
                      />
                    </span>
                  </StyledBaseAvatar>
                </Tooltip>
              </BaseAvatar>
            </UserAvatar>
          </Avatar>
        </StyledAvatar>
        <StyledAvatar
          hasTooltip={true}
          key="5"
          size={28}
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "5",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <Avatar
            className="css-cqjcge-StyledAvatar-Circle e1axh4r50"
            hasTooltip={true}
            size={28}
            user={
              Object {
                "email": "foo@example.com",
                "flags": Object {
                  "newsletter_consent_prompt": false,
                },
                "hasPasswordAuth": true,
                "id": "5",
                "isAuthenticated": true,
                "name": "Foo Bar",
                "options": Object {
                  "timezone": "UTC",
                },
                "username": "foo@example.com",
              }
            }
          >
            <UserAvatar
              className="css-cqjcge-StyledAvatar-Circle e1axh4r50"
              gravatar={true}
              hasTooltip={true}
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "flags": Object {
                    "newsletter_consent_prompt": false,
                  },
                  "hasPasswordAuth": true,
                  "id": "5",
                  "isAuthenticated": true,
                  "name": "Foo Bar",
                  "options": Object {
                    "timezone": "UTC",
                  },
                  "username": "foo@example.com",
                }
              }
            >
              <BaseAvatar
                className="css-cqjcge-StyledAvatar-Circle e1axh4r50"
                gravatarId="foo@example.com"
                hasTooltip={true}
                letterId="foo@example.com"
                size={28}
                style={Object {}}
                title="Foo Bar"
                tooltip="Foo Bar (foo@example.com)"
                type="gravatar"
                uploadPath="avatar"
              >
                <Tooltip
                  disabled={false}
                  title="Foo Bar (foo@example.com)"
                >
                  <StyledBaseAvatar
                    className="tip avatar css-cqjcge-StyledAvatar-Circle e1axh4r50"
                    style={
                      Object {
                        "height": "28px",
                        "width": "28px",
                      }
                    }
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="tip avatar e1axh4r50 css-15y5yv2-StyledBaseAvatar-StyledAvatar-Circle e1z0ohzl0"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                      title="Foo Bar (foo@example.com)"
                    >
                      <img
                        onError={[Function]}
                        onLoad={[Function]}
                        src="undefined/avatar/b48def645758b95537d4424c84d1a9ff?d=blank&s=32"
                      />
                    </span>
                  </StyledBaseAvatar>
                </Tooltip>
              </BaseAvatar>
            </UserAvatar>
          </Avatar>
        </StyledAvatar>
      </div>
    </Base>
  </Flex>
</AvatarList>
`;

exports[`AvatarList renders with user avatars 1`] = `
<AvatarList
  avatarSize={28}
  maxVisibleAvatars={5}
  users={
    Array [
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "1",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "2",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
    ]
  }
>
  <Flex
    direction="row-reverse"
  >
    <Base
      className="css-1go71fn"
      direction="row-reverse"
    >
      <div
        className="css-1go71fn"
        is={null}
      >
        <StyledAvatar
          hasTooltip={true}
          key="1"
          size={28}
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "1",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <Avatar
            className="css-cqjcge-StyledAvatar-Circle e1axh4r50"
            hasTooltip={true}
            size={28}
            user={
              Object {
                "email": "foo@example.com",
                "flags": Object {
                  "newsletter_consent_prompt": false,
                },
                "hasPasswordAuth": true,
                "id": "1",
                "isAuthenticated": true,
                "name": "Foo Bar",
                "options": Object {
                  "timezone": "UTC",
                },
                "username": "foo@example.com",
              }
            }
          >
            <UserAvatar
              className="css-cqjcge-StyledAvatar-Circle e1axh4r50"
              gravatar={true}
              hasTooltip={true}
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "flags": Object {
                    "newsletter_consent_prompt": false,
                  },
                  "hasPasswordAuth": true,
                  "id": "1",
                  "isAuthenticated": true,
                  "name": "Foo Bar",
                  "options": Object {
                    "timezone": "UTC",
                  },
                  "username": "foo@example.com",
                }
              }
            >
              <BaseAvatar
                className="css-cqjcge-StyledAvatar-Circle e1axh4r50"
                gravatarId="foo@example.com"
                hasTooltip={true}
                letterId="foo@example.com"
                size={28}
                style={Object {}}
                title="Foo Bar"
                tooltip="Foo Bar (foo@example.com)"
                type="gravatar"
                uploadPath="avatar"
              >
                <Tooltip
                  disabled={false}
                  title="Foo Bar (foo@example.com)"
                >
                  <StyledBaseAvatar
                    className="tip avatar css-cqjcge-StyledAvatar-Circle e1axh4r50"
                    style={
                      Object {
                        "height": "28px",
                        "width": "28px",
                      }
                    }
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="tip avatar e1axh4r50 css-15y5yv2-StyledBaseAvatar-StyledAvatar-Circle e1z0ohzl0"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                      title="Foo Bar (foo@example.com)"
                    >
                      <img
                        onError={[Function]}
                        onLoad={[Function]}
                        src="undefined/avatar/b48def645758b95537d4424c84d1a9ff?d=blank&s=32"
                      />
                    </span>
                  </StyledBaseAvatar>
                </Tooltip>
              </BaseAvatar>
            </UserAvatar>
          </Avatar>
        </StyledAvatar>
        <StyledAvatar
          hasTooltip={true}
          key="2"
          size={28}
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "2",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <Avatar
            className="css-cqjcge-StyledAvatar-Circle e1axh4r50"
            hasTooltip={true}
            size={28}
            user={
              Object {
                "email": "foo@example.com",
                "flags": Object {
                  "newsletter_consent_prompt": false,
                },
                "hasPasswordAuth": true,
                "id": "2",
                "isAuthenticated": true,
                "name": "Foo Bar",
                "options": Object {
                  "timezone": "UTC",
                },
                "username": "foo@example.com",
              }
            }
          >
            <UserAvatar
              className="css-cqjcge-StyledAvatar-Circle e1axh4r50"
              gravatar={true}
              hasTooltip={true}
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "flags": Object {
                    "newsletter_consent_prompt": false,
                  },
                  "hasPasswordAuth": true,
                  "id": "2",
                  "isAuthenticated": true,
                  "name": "Foo Bar",
                  "options": Object {
                    "timezone": "UTC",
                  },
                  "username": "foo@example.com",
                }
              }
            >
              <BaseAvatar
                className="css-cqjcge-StyledAvatar-Circle e1axh4r50"
                gravatarId="foo@example.com"
                hasTooltip={true}
                letterId="foo@example.com"
                size={28}
                style={Object {}}
                title="Foo Bar"
                tooltip="Foo Bar (foo@example.com)"
                type="gravatar"
                uploadPath="avatar"
              >
                <Tooltip
                  disabled={false}
                  title="Foo Bar (foo@example.com)"
                >
                  <StyledBaseAvatar
                    className="tip avatar css-cqjcge-StyledAvatar-Circle e1axh4r50"
                    style={
                      Object {
                        "height": "28px",
                        "width": "28px",
                      }
                    }
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="tip avatar e1axh4r50 css-15y5yv2-StyledBaseAvatar-StyledAvatar-Circle e1z0ohzl0"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                      title="Foo Bar (foo@example.com)"
                    >
                      <img
                        onError={[Function]}
                        onLoad={[Function]}
                        src="undefined/avatar/b48def645758b95537d4424c84d1a9ff?d=blank&s=32"
                      />
                    </span>
                  </StyledBaseAvatar>
                </Tooltip>
              </BaseAvatar>
            </UserAvatar>
          </Avatar>
        </StyledAvatar>
      </div>
    </Base>
  </Flex>
</AvatarList>
`;
